--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -21,7 +21,7 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
-  - '--file=scripts/docker/base'
+  - '--file=install/docker/base'
   - '--tag=gcr.io/$PROJECT_ID/forseti-base'
   - '.'
   waitFor: ['-']
@@ -30,11 +30,16 @@ steps:
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
-  - '--file=scripts/docker/forseti'
+  - '--file=install/docker/forseti'
   - '--build-arg=BASE_IMAGE=gcr.io/$PROJECT_ID/forseti-base'
   - '--tag=gcr.io/$PROJECT_ID/forseti'
   - '.'
   waitFor: ['base']
   id: forseti
+  
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['run', 'gcr.io/$PROJECT_ID/forseti', 'python', '-m', 'unittest', 'discover', '--verbose', '-s', '.', '-p', '*_test.py']
+  waitFor: ['forseti']
+  id: unittest
 
 images: ['gcr.io/$PROJECT_ID/forseti-base', 'gcr.io/$PROJECT_ID/forseti']
