show the scanner index id only when a specific scanner name is provided

--- a/rules/external_project_access_rules.yaml
+++ b/rules/external_project_access_rules.yaml
@@ -15,4 +15,5 @@
 rules:
 - name: Only allow access to projects in my organization.
   allowed_ancestors:
-  - organizations/{ORGANIZATION_ID}
+  - organizations/660570133860
+  # {ORGANIZATION_ID}
