--- a/deployment-templates/deploy-forseti-server.yaml.sample
+++ b/deployment-templates/deploy-forseti-server.yaml.sample
@@ -81,4 +81,5 @@ resources:
     # The default is "run at some random minute 0-59 (configured in
     # forseti-instance-sever.py), every other hour".
     run-frequency: "{rand_minute} */2 * * *"
-    epa_cron_schedule: "0 * * 8 00"
+    epas-cron-enabled: true
+    epas-cron-schedule: "0 * * 8 00"
