--- a/rules/group_rules.yaml
+++ b/rules/group_rules.yaml
@@ -19,6 +19,10 @@
       # Must use quotes if the condition starts with @ symbol.
     - member_email: "@{DOMAIN}"
     - member_email: "@gmail.com"
+    # Service Accounts
+    - member_email: "gserviceaccount.com"
+    # Big Query Transfer Service
+    - member_email: "@bqdts.google.baggins"
 
 #- name: Allow mypartner users to be in a group.
 #  group_email: <FOO_GROUP>@<MY_COMPANY DOMAIN>
