--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ description: "Tools to secure Google Cloud Platform"
 exclude: ["Gemfile",
           "Gemfile.lock",
           "README.md",
-          "vendor",
+          "vendor/",
           "images/readme/",
           "client-secrets.json.enc",
           "_config.yml",
@@ -26,7 +26,9 @@ exclude: ["Gemfile",
           "travis/",
           "scripts/",
           ".gitignore",
-          "app.yaml"]
+          "app.yaml",
+          ".sass-cache/",
+          ".idea/"]
 exclude_from_watch: ["_docs/latest/",
                      "_data/doc_versions.yml",
                      "_data/doc_version_index.yml",
