Jekyll build speed improvements (#2331)
* modest improvements with include_cache

* more excludes and cache includes.

* more improvements.

--- a/_config.yml
+++ b/_config.yml
@@ -18,13 +18,17 @@ description: "Tools to secure Google Cloud Platform"
 exclude: ["Gemfile",
           "Gemfile.lock",
           "README.md",
-          "vendor",
+          "vendor/",
           "images/readme/",
           "client-secrets.json.enc",
           "_config.yml",
           ".travis.yml",
           "travis/",
-          "scripts/"]
+          "scripts/",
+          ".gitignore",
+          "app.yaml",
+          ".sass-cache/",
+          ".idea/"]
 exclude_from_watch: ["_docs/latest/",
                      "_data/doc_versions.yml",
                      "_data/doc_version_index.yml",
@@ -35,6 +39,7 @@ plugins:
   - jekyll-paginate-v2
   - jekyll-redirect-from
   - jekyll-responsive-image
+  - jekyll-include-cache
 google_analytics: UA-98416450-1
 highlighter: rouge
 markdown: kramdown
