email connector implementation phase 1

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -215,6 +215,13 @@ scanner:
 
 notifier:
 
+    #email connector configuration
+    email_connector_config:
+        - name: sendgrid
+          auth:
+              #sendgrid uses api_key
+              api_key: ''
+
     # For every resource type you can set up a notification pipeline
     # to send alerts for every violation found
     resources:
@@ -223,11 +230,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                data_format: csv
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -248,10 +250,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -264,10 +262,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -280,10 +274,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -296,10 +286,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -312,10 +298,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -328,10 +310,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -344,10 +322,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -360,10 +334,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -376,10 +346,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -392,10 +358,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -408,10 +370,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -424,10 +382,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -440,10 +394,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -456,10 +406,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -472,10 +418,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -488,10 +430,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -504,10 +442,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -520,10 +454,6 @@ notifier:
           notifiers:
             # Email violations
             - name: email_violations
-              configuration:
-                sendgrid_api_key: {SENDGRID_API_KEY}
-                sender: {EMAIL_SENDER}
-                recipient: {EMAIL_RECIPIENT}
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
