--- a/install/scripts/forseti.template.yaml
+++ b/install/scripts/forseti.template.yaml
@@ -1,10 +1,12 @@
 apiVersion: apps/v1
-kind: Deployment
+#kind: Deployment
+kind: CronJob
 metadata:
   name: forseti
   labels:
     app: forseti
 spec:
+  schedule: "${CRON_SCHEDULE}"
   selector:
     matchLabels:
       app: forseti
