--- a/install/scripts/forseti.template.yaml
+++ b/install/scripts/forseti.template.yaml
@@ -28,7 +28,7 @@ spec:
                   value: /var/secrets/google/key.json
             - name: cloudsql-proxy
               image: gcr.io/cloudsql-docker/gce-proxy:latest
-              command: ["/cloud_sql_proxy", "${CLOUD_SQL_CONNECTION}", "-credential_file=/var/secrets/google/key.json"]
+              command: ["/cloud_sql_proxy", "-instances=${CLOUD_SQL_CONNECTION}=tcp:3306", "-credential_file=/var/secrets/google/key.json"]
               securityContext:
                 runAsUser: 2  # non-root user
                 allowPrivilegeEscalation: false
