Forsetisecurity.org dev merge into Forsetisecurity.org (#2394)
* Update index.md

Change comma placement.

* Update .travis.yml (#2383)

* Update .travis.yml (#2387)

* + Change external link (#2389)

* + Change external link

* + Add d3js.org to urls to exclude from htmlproofer

* Insert echo statements to see what variables are (#2391)

* Insert echo statements to see what variables are

* Update .travis.yml

Take out $TRAVIS_PULL_REQUEST = true since it returns a pull number and not true.

* Update .travis.yml

Take out echo statement with pull request.

* Update .travis.yml

Take out echo statements.

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,6 @@ deploy:
   on:
     repo: GoogleCloudPlatform/forseti-security
     branch: forsetisecurity.org
-    condition: '"$TRAVIS_PULL_REQUEST" == "true" && "-z ${TRAVIS_SECURE_ENV_VARS+x}" && "$TRAVIS_EVENT_TYPE" == "push"'
+    condition: '"-z ${TRAVIS_SECURE_ENV_VARS+x}" && "$TRAVIS_EVENT_TYPE" == "push"'
   skip_cleanup: true
   no_promote: true
