added comments and fixed pylint issues

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -209,6 +209,7 @@ scanner:
 
 notifier:
 
+    # Provide connector details to receive violations when found
     email_connector_config:
           name: sendgrid
           auth:
@@ -243,8 +244,6 @@ notifier:
         - resource: audit_logging_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -255,8 +254,6 @@ notifier:
         - resource: blacklist_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -267,8 +264,6 @@ notifier:
         - resource: bigquery_acl_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -279,8 +274,6 @@ notifier:
         - resource: buckets_acl_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -291,8 +284,6 @@ notifier:
         - resource: cloudsql_acl_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -303,8 +294,6 @@ notifier:
         - resource: enabled_apis_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -315,8 +304,6 @@ notifier:
         - resource: firewall_rule_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -327,8 +314,6 @@ notifier:
         - resource: forwarding_rule_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -339,8 +324,6 @@ notifier:
         - resource: ke_version_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -351,8 +334,6 @@ notifier:
         - resource: ke_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -363,8 +344,6 @@ notifier:
         - resource: groups_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -375,8 +354,6 @@ notifier:
         - resource: instance_network_interface_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -387,8 +364,6 @@ notifier:
         - resource: iap_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -399,8 +374,6 @@ notifier:
         - resource: lien_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -411,8 +384,6 @@ notifier:
         - resource: location_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -423,8 +394,6 @@ notifier:
         - resource: log_sink_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -435,8 +404,6 @@ notifier:
         - resource: service_account_key_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -447,8 +414,6 @@ notifier:
         - resource: external_project_access_violations
           should_notify: true
           notifiers:
-            # Email violations
-            - name: email_violations
             # Upload violations to GCS.
             - name: gcs_violations
               configuration:
@@ -482,4 +447,3 @@ notifier:
         gcs_path: gs://{FORSETI_BUCKET}/inventory_summary
       email_summary:
         enabled: true
-
