--- a/install/scripts/forseti.template.yaml
+++ b/install/scripts/forseti.template.yaml
@@ -15,7 +15,11 @@ spec:
           containers:
             - name: forseti
               image: ${FORSETI_IMAGE}
-              command: ["/forseti-security/install/scripts/docker_entrypoint.sh", "${BUCKET}" ]
+              command: ["/forseti-security/install/scripts/docker_entrypoint.sh", \
+                        "--bucket=${BUCKET}", \
+                        "--log_level=debug", \
+                        "--run_server", \
+                        "--run_cronjob" ]
               securityContext:
                 runAsUser: 0  # root user
                 allowPrivilegeEscalation: true
