--- a/install/scripts/forseti.template.yaml
+++ b/install/scripts/forseti.template.yaml
@@ -19,6 +19,7 @@ spec:
                         "--bucket=${BUCKET}", \
                         "--log_level=debug", \
                         "--run_server", \
+                        "--services=scanner model inventory explain notifier", \
                         "--run_cronjob" ]
               securityContext:
                 runAsUser: 0  # root user
