--- a/install/scripts/forseti.template.yaml
+++ b/install/scripts/forseti.template.yaml
@@ -15,7 +15,7 @@ spec:
           containers:
             - name: forseti
               image: ${FORSETI_IMAGE}
-              command: ["/forseti-security/install/scripts/docker_entrypoint.sh", "${BUCKET}" ]
+              command: ["/forseti-security/install/scripts/docker_entrypoint.sh", "${BUCKET}", "${CRON_TYPE}" ]
               securityContext:
                 runAsUser: 0  # root user
                 allowPrivilegeEscalation: true
