--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -17,7 +17,15 @@
 # Example invocation:
 #   gcloud container builds submit --config scripts/docker/cloudbuild.yaml ./
 
+# Cache, ref. https://cloud.google.com/cloud-build/docs/speeding-up-builds
+
 steps:
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['pull', 'gcr.io/$PROJECT_ID/forseti-base:latest']
+  waitFor: ['-']
+  id: pull-base-for-cache
+
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
@@ -26,7 +34,7 @@ steps:
   - '--cache-from'
   - 'gcr.io/$PROJECT_ID/forseti-base:latest'
   - '.'
-  waitFor: ['-']
+  waitFor: ['pull-base-for-cache']
   id: base
 
 - name: 'gcr.io/cloud-builders/docker'
