--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -211,12 +211,12 @@ notifier:
 
     # Provide connector details to receive violations when found
     email_connector_config:
-          name: sendgrid
-          auth:
-             api_key: SENDGRID_API_KEY
-          sender: EMAIL_SENDER
-          recipient: EMAIL_RECIPIENT
-          data_format: csv
+      name: sendgrid
+      auth:
+        api_key: {SENDGRID_API_KEY}
+      sender: {EMAIL_SENDER}
+      recipient: {EMAIL_RECIPIENT}
+      data_format: csv
 
     # For every resource type you can set up a notification pipeline
     # to send alerts for every violation found
