Alpha sorted imports.

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -209,7 +209,7 @@ scanner:
 
 notifier:
 
-    # Provide connector details to receive violations when found
+    # Provide connector details
     email_connector_config:
       name: sendgrid
       auth:
