Docker poc refactoring (#2416)
* Add Docker entrypoint script to start Forseti Server in a container

* Merge all docker related changes to this branch.

* Fix entrypoint filename

* Add.dockerignore

* Update docker_entrpoint.sh comments and forseti dockerfile comments.

* Update docker_entrpoint.sh Add new line at end of file.

* Update docker_entrypoint.sh

Add gsutil -DD debug flag

* Update docker_entrypoint.sh

Set forseti server log level to debug

* Update docker_entrypoint.sh

Remove & from forseti server command. Don't run it as background task.

* Add poc k8s_setup_forseti.sh and forseti.template.yaml

* Update comment in k8s_setup_forseti.sh

* Update k8s_setup_forseti.sh

* Add cos_setup_forseti.sh for proof of concept

* Updated k8s_setup_forseti.sh, added newline at end of file

* Update docker_entrypoint.sh

Modified comments

* Update .dockerignore. Added .git and .dockerignore entries.

* Update to enable CronJob on k8s

* Fix last line in k8s_setup_forseti.sh

* wait 60s after starting server before running rest of job

* Wait 60s after starting service to allow for it to fully start

* Update forseti.template.yaml

* docker_entrypoint.sh Wait 10s after servers start
forseti.template.yaml Cloud SQL v1.13, never allow concurrent cronjob

* Cloud SQL latest tag. Remove debugging.

* Fix cloud sql connection string

* Run forseti server as a background task

* Temporarily add set -x for debugging

* Modify forseti notifier run call

* Refactor Cloud SQL Proxy to run as k8s service instead of a sidecar

* Refactor Cloud SQL Proxy as k8s service instead of sidecar

* Update comment

* Use k8s env vars for Cloud SQL

* Fix Cloud SQL connection string for Service

* Refactor docker_entrypoint.sh

* Refactor docker_entrypoint.sh

* Refactor docker_entrypoint.sh

* Refactor docker_entrypoint.sh
Refactor forseti.template.yaml

* Refactor forseti.template.yaml

* Refactor for

--- a/install/docker/cloudbuild.yaml
+++ b/install/docker/cloudbuild.yaml
@@ -17,14 +17,24 @@
 # Example invocation:
 #   gcloud container builds submit --config scripts/docker/cloudbuild.yaml ./
 
+# Cache, ref. https://cloud.google.com/cloud-build/docs/speeding-up-builds
+
 steps:
+
+- name: 'gcr.io/cloud-builders/docker'
+  args: ['pull', 'gcr.io/$PROJECT_ID/forseti-base:latest']
+  waitFor: ['-']
+  id: pull-base-for-cache
+
 - name: 'gcr.io/cloud-builders/docker'
   args:
   - 'build'
   - '--file=install/docker/base'
   - '--tag=gcr.io/$PROJECT_ID/forseti-base'
+  - '--cache-from'
+  - 'gcr.io/$PROJECT_ID/forseti-base:latest'
   - '.'
-  waitFor: ['-']
+  waitFor: ['pull-base-for-cache']
   id: base
 
 - name: 'gcr.io/cloud-builders/docker'
