--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -209,13 +209,13 @@ scanner:
 
 notifier:
 
-    # Provide connector details to receive violations when found
+    # Provide connector details
     email_connector_config:
           name: sendgrid
           auth:
-             api_key: SENDGRID_API_KEY
-          sender: EMAIL_SENDER
-          recipient: EMAIL_RECIPIENT
+             api_key: {SENDGRID_API_KEY}
+          sender: {EMAIL_SENDER}
+          recipient: {EMAIL_RECIPIENT}
           data_format: csv
 
     # For every resource type you can set up a notification pipeline
