Renamed email_connector_config to email_connector in config file.

--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -210,7 +210,7 @@ scanner:
 notifier:
 
     # Provide connector details
-    email_connector_config:
+    email_connector:
           name: sendgrid
           auth:
              api_key: {SENDGRID_API_KEY}
