--- a/configs/server/forseti_conf_server.yaml.in
+++ b/configs/server/forseti_conf_server.yaml.in
@@ -86,7 +86,7 @@ inventory:
         enabled: {CAI_ENABLED}
         gcs_path: gs://{FORSETI_CAI_BUCKET}
 
-        # Timeout to wait for the exportAssets API to return success.
+        # Timeout in seconds to wait for the exportAssets API to return success.
         # Defaults to 3600 if not set.
         api_timeout: 3600
 
