--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -86,7 +86,7 @@ inventory:
         enabled: True
         gcs_path: MY_FORSETI_CAI_GCS_BUCKET
 
-        # Timeout to wait for the exportAssets API to return success.
+        # Timeout in seconds to wait for the exportAssets API to return success.
         # Defaults to 3600 if not set.
         api_timeout: 3600
 
