--- a/configs/server/forseti_conf_server.yaml.sample
+++ b/configs/server/forseti_conf_server.yaml.sample
@@ -86,6 +86,10 @@ inventory:
         enabled: True
         gcs_path: MY_FORSETI_CAI_GCS_BUCKET
 
+        # Timeout in seconds to wait for the exportAssets API to return success.
+        # Defaults to 3600 if not set.
+        api_timeout: 3600
+
         # Optional list of asset types supported by Cloud Asset inventory API.
         # https://cloud.google.com/resource-manager/docs/cloud-asset-inventory/overview
         # If included, only the asset types listed will be included in the
